--- a/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj.filters
+++ b/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj.filters
@@ -44,4 +44,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="twodeebg.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
