--- a/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
+++ b/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <ResourceCompile Include="TwoDeeGameEngine.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="twodeebg.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\sdl2.nuget.redist.2.28.5\build\native\sdl2.nuget.redist.targets" Condition="Exists('..\packages\sdl2.nuget.redist.2.28.5\build\native\sdl2.nuget.redist.targets')" />
