Camera class made, works but still need to entirely remove camera functionality from Level

--- a/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
+++ b/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="TwoDeeGameEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
