Trying something different, a little fancier. Need to replace all references of 'level' with 'area', make a test area and work on perfecting the loop. ouroboros

--- a/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
+++ b/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Area.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="TwoDeeGameEngine.cpp" />
@@ -136,8 +138,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Area.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="GameLoop.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
