--- a/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
+++ b/TwoDeeGameEngine/TwoDeeGameEngine.vcxproj
@@ -129,9 +129,11 @@
   <ItemGroup>
     <ClCompile Include="Area.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="TwoDeeGameEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -141,9 +143,11 @@
     <ClInclude Include="Area.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ResourceManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TwoDeeGameEngine.rc" />
